Fix double click not working when double clicking on subdirectory in fileview

BUG: 337457